Updated Read Me & HTMl

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="navbar">
         <div class="navbar-nav">
           <a href="#destination-form">Destination</a>
-          <a class="" href="#">Covid-19 Info</a>
+          <a class="" href="covid.html">Covid-19 Info</a>
           <a href="#currencyInfo">Currency Info</a>
         </div>
       </div>
