--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <div class = "question">
                  <label for="text" id = "question">Where are you going?</label>
               <input type="text" id = "userDestination" class = "country" placeholder="Country">
-              <button id = "btn btn-secondary">Search</button>
+              <button id = "btn" class =  "btn-secondary">Search</button>
               </div>
              
               <div class = "search">
